--- a/style/mediumRounded/mediumRounded.qss
+++ b/style/mediumRounded/mediumRounded.qss
@@ -1,35 +1,44 @@
+/*
+
+reference
+http://doc.qt.io/qt-4.8/stylesheet-reference.html
+
+*/
+
 QListView
 {
     color: white;
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(42, 42, 42, 128);
     padding: 2px;
     border-style: solid;
     border-radius: 2px;
     border-width: 1px;
     border-color: rgb(0, 236, 236);
-    font-size: 12pt;
+    font-size: 14pt;
+    font-family: "Hiragino Sans";
+    font-weight: 400
 }
 
 QLineEdit
 {
-    color: white;
-    background-color: rgb(30, 30, 30);
-    padding: 2px;
+    color: white; 
+    background-color: rgb(42, 42, 42);
+    padding: 4px;
     border-style: solid;
-    border-radius: 2px;
+    border-radius: 4px;
     border-width: 1px;
-    border-color: rgb(0, 236, 236);
-    font-size: 12pt;
+    border-color: rgb(90, 120, 155);
+    font-size: 18pt;
+    font-family: "Hiragino Sans";
+    font-weight: 400
 }
 
-QFrame
+#miExec_frame
 {
-    background-color: rgb(60, 60, 60, 255);
-    color: white;
-    padding: 10px;
+    background-color: rgb(68, 68, 68, 68);
+    padding: 8px;
     border-style: solid;
     border-radius: 8px;
-    border-width: 2px;
+    border-width: 1px;
     border-color: rgb(0, 236, 236);
-    font-size: 12pt;
 }
