--- a/style/nuke/nuke.qss
+++ b/style/nuke/nuke.qss
@@ -7,31 +7,31 @@ http://doc.qt.io/qt-4.8/stylesheet-reference.html
 
 QListView
 {
-    color: white;
-    background-color: rgb(80, 80, 80);
+    color: rgb(200, 200, 200);
+    background-color: rgb(58, 58, 58);
     selection-background-color: rgb(247, 147, 30);
     /* padding: 0px; */
-    border-style: solid;
-    border-radius: 4;
+    border-style: ridge;
+    border-radius: 2px;
     border-width: 1px;
-    border-color: rgb(205, 125, 32);
-    font-size: 14pt;
-    font-family: Courier New;
+    border-color: rgb(25, 25, 25);
+    /* font-size: 16pt; */
+    /* font-family: Courier New; */
     font-weight: 100
 }
 
 QLineEdit
 {
-    color: white; 
-    background-color: rgb(80, 80, 80);
+    color: rgb(200, 200, 200);
+    background-color: rgb(58, 58, 58);
     selection-background-color: rgb(247, 147, 30);
     /* padding: 0px; */
     border-style: solid;
     border-radius: 4px;
     border-width: 1px;
     border-color: rgb(90, 120, 155);
-    font-size: 14pt;
-    font-family: Courier New;
+    /* font-size: 10pt; */
+    /* font-family: Courier New; */
     font-weight: 100
 }
 
@@ -42,9 +42,9 @@ QLineEdit
     padding: 7px;
     border-style: solid;
     border-radius: 8px;
-    border-width: 2px;
-    border-color: rgb(143, 143, 143);
-    /* font-size: 18pt; */
-    /* font-family: "Hiragino Sans"; */
+    border-width: 1px;
+    border-color: rgb(255, 255, 255);
+    /* font-size: 10pt; */
+    /* font-family: Courier New; */
     /* font-weight: 400 */
 }
