--- a/style/mediumRounded/mediumRounded.qss
+++ b/style/mediumRounded/mediumRounded.qss
@@ -15,7 +15,7 @@ QListView
     border-width: 1px;
     border-color: rgb(0, 236, 236);
     font-size: 14pt;
-    font-family: "Hiragino Sans";
+    font-family: "M+ 1p";
     font-weight: 400
 }
 
@@ -29,7 +29,7 @@ QLineEdit
     border-width: 1px;
     border-color: rgb(90, 120, 155);
     font-size: 20pt;
-    font-family: "Hiragino Sans";
+    font-family: "M+ 1p";
     font-weight: 400
 }
 
