--- a/style/alfredLight/alfredLight.qss
+++ b/style/alfredLight/alfredLight.qss
@@ -7,8 +7,8 @@ http://doc.qt.io/qt-4.8/stylesheet-reference.html
 
 QListView
 {
-    color: white;
-    background-color: rgb(60, 60, 60);
+    color: black;
+    background-color: rgb(251, 251, 251);
     selection-background-color: rgb(178, 215, 255);
     /* padding: 0px; */
     border-style: solid;
@@ -23,14 +23,14 @@ QListView
 
 QLineEdit
 {
-    color: white;
-    background-color: rgb(60, 60, 60);
+    color: black;
+    background-color: rgb(209, 209, 209);
     selection-background-color: rgb(178, 215, 255);
-    /* padding: 0px; */
+    padding: 0px;
     border-style: solid;
     border-radius: 12px;
     border-width: 7px;
-    border-color: black;
+    border-color: rgb(251, 251, 251);
     font-size: 28pt;
     font-family: "M+ 1p";
     font-weight: normal;
@@ -40,10 +40,10 @@ QLineEdit
 #miExec_frame
 {
     /* color: white; */ 
-    background-color: rgb(10, 10, 10, 64);
+    background-color: rgb(10, 10, 10, 120);
     padding: 7px;
     border-style: solid;
     border-radius: 16px;
     border-width: 0px;
-    border-color: rgb(128, 128, 128);
+    border-color: rgb(60, 60, 60);
 }
