--- a/style.qss
+++ b/style.qss
@@ -4,7 +4,7 @@ QListView
     background-color: rgb(60, 60, 60);
     selection-background-color: rgb(178, 215, 255);
     border-style: solid;
-    border-radius: 12px;
+    border-radius: 0px;
     border-width: 0px;
     border-color: rgb(60, 60, 60, 100);
     font-size: 10pt;
@@ -13,11 +13,13 @@ QListView
 QLineEdit
 {
     color: white;
-    background-color: rgb(60, 60, 60);
-    selection-background-color: rgb(178, 215, 255);
+    background-color: rgb(42, 42, 42);
+    /* selection-background-color: rgb(178, 215, 255); */
     border-style: solid;
-    border-radius: 12px;
-    border-width: 0px;
-    border-color: white;
+    border-radius: 0x;
+    padding: 4px;
+    border-width: 4;
+    /* border-color: rgb(94, 123, 151); */
+    border-color: rgb(68, 68, 68);
     font-size: 14pt;
 }
